Update track labels to include icons and adjust styles for better visibility

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         .track-label {
             width: 100px;
-            font-size: 0.9em;
+            font-size: 0.75em;
             font-weight: bold;
             color: #4ecdc4;
             text-transform: uppercase;
@@ -160,9 +160,18 @@
             border: 2px solid #4ecdc4;
             border-radius: 6px;
             padding: 8px;
+            margin-right: 12px;
             cursor: pointer;
             transition: all 0.2s;
             text-align: center;
+        }
+
+        .track-icon {
+            display: none;
+        }
+
+        .track-name {
+            display: inline;
         }
 
         .track-label:hover {
@@ -233,8 +242,17 @@
             }
 
             .track-label {
-                width: 70px;
-                font-size: 0.75em;
+                width: 50px;
+                font-size: 1.2em;
+                padding: 6px;
+            }
+
+            .track-name {
+                display: none;
+            }
+
+            .track-icon {
+                display: inline;
             }
 
             button {
@@ -270,7 +288,10 @@
         <div class="sequencer">
             <template x-for="(track, trackIndex) in tracks" :key="trackIndex">
                 <div class="track">
-                    <button class="track-label" x-text="track.name" @click="previewSound(trackIndex)"></button>
+                    <button class="track-label" @click="previewSound(trackIndex)">
+                        <span class="track-name" x-text="track.name"></span>
+                        <span class="track-icon" x-text="track.icon"></span>
+                    </button>
                     <div class="steps">
                         <template x-for="(step, stepIndex) in track.steps" :key="stepIndex">
                             <div 
@@ -472,14 +493,14 @@
         function drumMachine() {
             return {
                 tracks: [
-                    { name: 'Kick', steps: Array(16).fill(false), sound: null },
-                    { name: 'Snare', steps: Array(16).fill(false), sound: null },
-                    { name: 'Closed HH', steps: Array(16).fill(false), sound: null },
-                    { name: 'Open HH', steps: Array(16).fill(false), sound: null },
-                    { name: 'Clap', steps: Array(16).fill(false), sound: null },
-                    { name: 'Rim', steps: Array(16).fill(false), sound: null },
-                    { name: 'Tom Hi', steps: Array(16).fill(false), sound: null },
-                    { name: 'Tom Lo', steps: Array(16).fill(false), sound: null }
+                    { name: 'Kick', icon: '🦶', steps: Array(16).fill(false), sound: null },
+                    { name: 'Snare', icon: '🥁', steps: Array(16).fill(false), sound: null },
+                    { name: 'Closed HH', icon: '🔒', steps: Array(16).fill(false), sound: null },
+                    { name: 'Open HH', icon: '🔓', steps: Array(16).fill(false), sound: null },
+                    { name: 'Clap', icon: '👏', steps: Array(16).fill(false), sound: null },
+                    { name: 'Rim', icon: '⭕', steps: Array(16).fill(false), sound: null },
+                    { name: 'Tom Hi', icon: '⬆️', steps: Array(16).fill(false), sound: null },
+                    { name: 'Tom Lo', icon: '⬇️', steps: Array(16).fill(false), sound: null }
                 ],
                 tempo: 120,
                 isPlaying: false,
